# mcp-server-phext

./: ENHANCEMENT_SUMMARY.md  LICENSE  README.md  TODO.md  pyproject.toml  test_setup.py
src/mcp_server_phext/: __init__.py  __main__.py  server.py
src/mcp_server_phext/core/: __init__.py  basic.py  bulk.py  coordinates.py  performance.py  search.py  sq_api.py  state.py
tests/: test_basic.py
